package com.codecool.ants.ant;

public enum DroneStatus {
    MOVING, KICKED, MATING;
}
